fix z-index

--- a/lego-webapp/pages/users/@username/_components/UserProfile.module.css
+++ b/lego-webapp/pages/users/@username/_components/UserProfile.module.css
@@ -151,6 +151,10 @@ img.frame {
   justify-content: space-between;
 }
 
+.trophyTooltipPopover {
+  z-index: 60;
+}
+
 .trophyImage {
   height: 100px;
   width: auto;
